# C-System-Tools

./: CMakeLists.txt  main.cpp  readme.md  starter.cpp
config/: sysAccess.manifest  sysAccess.rc  sysAccess.res
dev/Packager/: packager.cpp  readme.md
lib/: readme.md
lib/FolderScanner/: main.cpp  main.h
lib/Random/: main.cpp  main.h
lib/SystemUser/: main.cpp  main.h
lib/~WindowsUsers/: ~main.cpp  ~main.h
